# Boa

./: .gitignore  BUILD_WINDOWS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.bat  pyproject.toml  run_tests.bat  setup.cfg
.github/workflows/: build-linux.yml  build-windows.yml  ci.yml  test.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  boa  boa_tests  cmake_install.cmake
boa-idle/: README.md
boa-lang/include/boa/: ast.h  interpreter.h  parser.h  token.h
boa-lang/src/: main.cpp
boa-lsp/: README.md
boa-stdlib/: README.md
boa-vm/: README.md
docs/: LANGUAGE_SPEC.md  SECURITY.md
examples/: calculator.boa  dict.boa  error_handling.boa  fibonacci.boa  fizzbuzz.boa  hello.boa  lists.boa  loops.boa  recursion.boa  scope.boa  string_ops.boa
installer/: boa_installer.nsi
src/boa/: __init__.py  ast_nodes.py  cli.py  compiler.py  errors.py  lexer.py  parser.py  runtime.py  semantic.py  transpiler.py
tests/: test_cli.py  test_lexer.py  test_parser.py  test_runtime.py  test_semantic.py  test_transpiler.py
tests/samples/: async_example.boa  classes.boa  hello.boa  types.boa
tests/unit/: test_main.cpp
