[build-system]
requires = ["hatchling>=1.20.0"]
build-backend = "hatchling.build"

[project]
name = "boa-lang"
version = "0.2.0"
description = "Boa: a standalone custom language with its own compiler pipeline and runtime"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license = { text = "MIT" }
authors = [
  { name = "Boa Contributors" }
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pyinstaller>=6.0.0",
]

[project.scripts]
boa = "boa.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/boa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
